Sales Support CR

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,6 +20,7 @@
         android:id="@+id/content_frame"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="40dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
@@ -29,34 +30,44 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
 
-
-        <ProgressBar
-            android:id="@+id/content_main_progressbar"
-            android:indeterminateDrawable="@drawable/progressbar_drawable"
-            android:layout_gravity="center"
-            android:layout_width="150dp"
-            android:layout_marginTop="0dp"
+        <FrameLayout
+            android:id="@+id/content_main_loading_screen"
+            android:layout_width="match_parent"
             android:visibility="gone"
-            android:layout_height="150dp" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/content_main_progressbar_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="90dp"
-            android:textColor="@color/colorLogo"
-            android:textSize="22dp"
-            android:visibility="gone"
-            android:text="@string/activity_loading" />
+            <ProgressBar
+                android:id="@+id/content_main_progressbar"
+                android:indeterminateDrawable="@drawable/progressbar_drawable"
+                android:layout_gravity="center"
+                android:layout_width="150dp"
+                android:layout_marginTop="0dp"
+                android:visibility="visible"
+                android:layout_height="150dp" />
 
-        <ImageView
-            android:id="@+id/content_main_progressbar_icon"
-            android:layout_width="70dp"
-            android:layout_gravity="center"
-            android:layout_height="70dp"
-            android:visibility="gone"
-            app:srcCompat="@mipmap/ic_launcher" />
+            <TextView
+                android:id="@+id/content_main_progressbar_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="90dp"
+                android:textColor="@color/colorLogo"
+                android:textSize="22dp"
+                android:visibility="visible"
+                android:text="@string/activity_loading" />
+
+            <ImageView
+                android:id="@+id/content_main_progressbar_icon"
+                android:layout_width="70dp"
+                android:layout_gravity="center"
+                android:layout_height="70dp"
+                android:visibility="visible"
+                app:srcCompat="@mipmap/ic_launcher" />
+
+
+        </FrameLayout>
+
     </FrameLayout>
+
 
 </android.support.constraint.ConstraintLayout>
