--- a/app/src/main/res/drawable/spinner_bg.xml
+++ b/app/src/main/res/drawable/spinner_bg.xml
@@ -1,30 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-
-        <layer-list>
-
-            <item>
-                <shape>
-                    <gradient android:angle="90" android:endColor="@color/white" android:startColor="@color/lightGray" android:type="linear" />
-
-                    <stroke android:width="0.33dp" android:color="@color/borderColor" />
-
-                    <corners android:radius="0dp" />
-
-                    <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
-                </shape>
-            </item>
-
-            <item android:right="5dp">
-
-                <bitmap android:gravity="center_vertical|right" android:src="@mipmap/arrowdropdown" />
-
-            </item>
-
-        </layer-list>
-
-    </item>
-
+    <item android:state_window_focused="false" android:state_enabled="true"
+        android:drawable="@drawable/spinner_active" />
+    <item android:state_window_focused="false" android:state_enabled="false"
+        android:drawable="@drawable/spinner_inactive" />
+    <item android:state_pressed="true" android:drawable="@drawable/spinner_active_focused" />
+    <item android:state_enabled="true" android:state_focused="true" android:drawable="@drawable/spinner_active_focused" />
+    <item android:state_enabled="true" android:drawable="@drawable/spinner_active" />
+    <item android:state_focused="true" android:drawable="@drawable/spinner_active_focused" />
+    <item android:drawable="@drawable/spinner_inactive" />
 </selector>
