--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,12 @@
     <color name="colorLogo">#7d17a6</color>
     <color name="colorLogo2">#a320d7</color>
     <color name="colorLogo3">#5a1078</color>
+    <color name="colorLogo4">#b367e6</color>
     <color name="lightBlue">#0083ef</color>
     <color name="darkBlue">#004986</color>
     <color name="white">#ffffff</color>
     <color name="lightGray">#dcdcdc</color>
+    <color name="darkBlack">#404040</color>
     <color name="btnColor">#ff8b33</color>
     <color name="borderColor">#8511b3</color>
 </resources>
