--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -13,8 +13,17 @@
         android:background="@color/white"
         android:layout_height="45dp">
 
+        <ImageView
+            android:id="@+id/icon_title"
+            android:layout_marginTop="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            app:srcCompat="@mipmap/icon_referral" />
+
         <TextView
             android:id="@+id/sales_txt_salesrefferal"
+            android:layout_toRightOf="@id/icon_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
