--- a/app/src/main/res/drawable/button_blue.xml
+++ b/app/src/main/res/drawable/button_blue.xml
@@ -1,4 +1,20 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="false" >
+        <shape>
+            <solid
+                android:color="@color/lightGray" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/darkBlack" />
+            <corners
+                android:radius="3dp" />
+            <padding
+                android:left="15dp"
+                android:top="0dp"
+                android:right="15dp"
+                android:bottom="0dp" />
+        </shape>
+    </item>
     <item android:state_pressed="true" >
         <shape>
             <solid
