--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,9 +36,9 @@
 
     <ImageView
         android:id="@+id/login_center_progressbar_icon"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_gravity="center"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:visibility="gone"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
