--- a/app/src/main/res/layout/dialog_addcompetitor.xml
+++ b/app/src/main/res/layout/dialog_addcompetitor.xml
@@ -3,6 +3,30 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:background="@color/colorLogo"
+        android:id="@+id/sales_dialog_header"
+        android:paddingBottom="5dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/dialogitem_txt_sales_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/dialog_addcompetitor"
+            android:textColor="@android:color/white" />
+
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/dialogitem_txt_competitor"
         android:layout_width="match_parent"
