--- a/app/src/main/res/layout/fragment_city.xml
+++ b/app/src/main/res/layout/fragment_city.xml
@@ -24,8 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:useCompatPadding="true"
-            app:backgroundTint="@color/colorLogo2"
-            app:srcCompat="@android:drawable/ic_menu_search" />
+            app:backgroundTint="@color/lightBlue"
+            app:srcCompat="@mipmap/icon_search" />
 
 
 
@@ -35,8 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/fab_areaSearch"
             app:useCompatPadding="true"
-            app:backgroundTint="@color/colorLogo2"
-            app:srcCompat="@android:drawable/ic_input_get" />
+            app:backgroundTint="@color/lightBlue"
+            app:srcCompat="@mipmap/icon_refresh" />
 
     </RelativeLayout>
 
