--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,24 +5,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/content_main_layout_logo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/content_main_image_logo"
+        <LinearLayout
+            android:id="@+id/content_main_layout_logo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/mr_logo" />
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/content_main_image_sales"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/sales_logo" />
+            <id.co.myrepublic.salessupport.widget.CustomSpinner
+                android:id="@+id/test_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                app:labelText="@string/fragment_sales_know_us" />
+
+            <Button
+                android:id="@+id/test_button"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:visibility="gone"
+                android:background="@drawable/button_blue"
+                android:text="@string/button_confirm" />
+
+            <ImageView
+                android:id="@+id/content_main_image_logo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/mr_logo" />
+
+            <ImageView
+                android:id="@+id/content_main_image_sales"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/sales_logo" />
     </LinearLayout>
 
 </LinearLayout>
