--- a/app/src/main/res/layout/row_item_common.xml
+++ b/app/src/main/res/layout/row_item_common.xml
@@ -4,13 +4,23 @@
     android:layout_height="wrap_content"
     android:padding="10dp">
 
+    <ProgressBar
+        android:id="@+id/rowitem_progressbar"
+        android:indeterminateDrawable="@drawable/progressbar_small"
+        android:layout_width="20dp"
+        android:layout_marginTop="0dp"
+        android:visibility="gone"
+        android:layout_height="20dp" />
+
     <TextView
         android:id="@+id/rowitem_maintext"
         android:layout_width="wrap_content"
+        android:layout_toRightOf="@id/rowitem_progressbar"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/black"
+        android:text=""
         android:textStyle="bold" />
 
     <TextView
@@ -19,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/rowitem_maintext"
         android:layout_marginLeft="10dp"
+        android:text=""
         android:textColor="@android:color/black" />
 
     <TextView
