--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 app:inputType="text"
+                app:value="1"
                 app:validator="required"
                 app:labelText="@string/fragment_sales_agent_code" />
 
@@ -68,6 +69,7 @@
                 android:layout_marginTop="10dp"
                 app:inputType="text"
                 app:enabled="false"
+                app:value="MyRepublic Limited"
                 app:labelText="@string/fragment_sales_agent_name" />
 
             <id.co.myrepublic.salessupport.widget.CustomEditText
