--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -31,69 +31,199 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/verification_txt_desc"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="@string/fragment_verification_desc"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/black" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/verification_txt_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/black" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/verification_editText_phone_prefix"
+        <LinearLayout
+            android:id="@+id/verification_scroll_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight=".50"
-            android:ems="10"
-            android:inputType="phone"
-            android:text="" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/verification_editText_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight=".50"
-            android:ems="10"
-            android:inputType="phone"
-            android:text="" />
+            <LinearLayout android:id="@+id/verification_code_layout"
+                android:orientation="vertical" android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/verification_txt_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/fragment_verification_desc"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/black" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/verification_btn_resend"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:textColor="@color/white"
-            android:background="@drawable/button_blue"
-            android:text="@string/button_resend" />
+                <TextView
+                    android:id="@+id/verification_txt_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/black" />
 
-        <Button
-            android:id="@+id/verification_btn_confirm"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:background="@drawable/button_blue"
-            android:text="@string/button_confirm" />
-    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/verification_editText_userid"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight=".50"
+                        android:ems="10"
+                        android:enabled="false"
+                        android:inputType="phone"
+                        android:text="" />
+
+                    <EditText
+                        android:id="@+id/verification_editText_otp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight=".50"
+                        android:ems="10"
+                        android:inputType="phone"
+                        android:text="" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/verification_btn_resend"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:textColor="@color/white"
+                        android:background="@drawable/button_blue"
+                        android:text="@string/button_resend" />
+
+                    <Button
+                        android:id="@+id/verification_btn_confirm"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:background="@drawable/button_blue"
+                        android:text="@string/button_confirm" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout android:id="@+id/verification_status_layout"
+                android:orientation="vertical" android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
+                android:visibility="visible"
+                android:layout_height="match_parent">
+
+
+                <LinearLayout android:id="@+id/verification_status_progress_create_order_layout"
+                    android:orientation="horizontal" android:layout_width="match_parent"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/verification_status_progress_create_order_txt"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/fragment_verification_status_insert_order"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:textColor="@android:color/black" />
+
+
+                    <TextView
+                        android:id="@+id/verification_status_progress_create_order_status_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/status_progress"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:textColor="@color/yellow" />
+
+
+                    <ProgressBar
+                        android:id="@+id/verification_status_progress_create_order_progress"
+                        android:indeterminateDrawable="@drawable/progressbar_small"
+                        android:layout_width="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_height="20dp" />
+
+                </LinearLayout>
+
+                <LinearLayout android:id="@+id/verification_status_progress_upload_layout"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/verification_status_progress_upload_txt"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/fragment_verification_status_upload_doc"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:textColor="@android:color/black" />
+
+
+                    <TextView
+                        android:id="@+id/verification_status_progress_upload_status_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/status_progress"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:textColor="@color/yellow" />
+
+
+                    <ProgressBar
+                        android:id="@+id/verification_status_progress_upload_progress"
+                        android:indeterminateDrawable="@drawable/progressbar_small"
+                        android:layout_width="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_height="20dp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout android:id="@+id/verification_result_layout"
+                android:orientation="vertical" android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/verification_result_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/verification_result_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:textColor="@android:color/black" />
+
+                <Button
+                    android:id="@+id/verification_btn_ok"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center"
+                    android:textColor="@color/white"
+                    android:background="@drawable/button_blue"
+                    android:text="@string/button_ok" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
