--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -139,6 +139,7 @@
                         android:id="@+id/verification_status_progress_create_order_status_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
                         android:text="@string/status_progress"
                         android:textStyle="bold"
                         android:textSize="16dp"
@@ -154,7 +155,7 @@
 
                 </LinearLayout>
 
-                <LinearLayout android:id="@+id/verification_status_progress_upload_layout"
+                <LinearLayout android:id="@+id/verification_status_progress_upload_id_layout"
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal"
                     android:visibility="gone"
@@ -162,19 +163,20 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/verification_status_progress_upload_txt"
+                        android:id="@+id/verification_status_progress_upload_id_txt"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/fragment_verification_status_upload_doc"
+                        android:text="@string/fragment_verification_status_upload_id"
                         android:textStyle="bold"
                         android:textSize="16dp"
                         android:textColor="@android:color/black" />
 
 
                     <TextView
-                        android:id="@+id/verification_status_progress_upload_status_txt"
+                        android:id="@+id/verification_status_progress_upload_id_status_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
                         android:text="@string/status_progress"
                         android:textStyle="bold"
                         android:textSize="16dp"
@@ -182,7 +184,44 @@
 
 
                     <ProgressBar
-                        android:id="@+id/verification_status_progress_upload_progress"
+                        android:id="@+id/verification_status_progress_upload_id_progress"
+                        android:indeterminateDrawable="@drawable/progressbar_small"
+                        android:layout_width="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_height="20dp" />
+
+                </LinearLayout>
+
+                <LinearLayout android:id="@+id/verification_status_progress_upload_other_layout"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/verification_status_progress_upload_other_txt"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/fragment_verification_status_upload_other_doc"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:textColor="@android:color/black" />
+
+
+                    <TextView
+                        android:id="@+id/verification_status_progress_upload_other_status_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="@string/status_progress"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:textColor="@color/yellow" />
+
+
+                    <ProgressBar
+                        android:id="@+id/verification_status_progress_upload_other_progress"
                         android:indeterminateDrawable="@drawable/progressbar_small"
                         android:layout_width="20dp"
                         android:layout_marginLeft="20dp"
