--- a/app/src/main/res/layout/row_item_common.xml
+++ b/app/src/main/res/layout/row_item_common.xml
@@ -1,55 +1,75 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rowitem_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="10dp">
 
-    <ProgressBar
-        android:id="@+id/rowitem_progressbar"
-        android:indeterminateDrawable="@drawable/progressbar_small"
-        android:layout_width="20dp"
-        android:layout_marginTop="0dp"
-        android:visibility="gone"
-        android:layout_height="20dp" />
-
-    <TextView
-        android:id="@+id/rowitem_maintext"
-        android:layout_width="wrap_content"
-        android:layout_toRightOf="@id/rowitem_progressbar"
+    <LinearLayout
+        android:id="@+id/rowitem_main_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginLeft="5dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/black"
-        android:text=""
-        android:textStyle="bold" />
+        android:layout_marginTop="5dp">
 
-    <TextView
-        android:id="@+id/rowitem_maintext2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/rowitem_maintext"
-        android:layout_marginLeft="10dp"
-        android:text=""
-        android:textColor="@android:color/black" />
+        <ProgressBar
+            android:id="@+id/rowitem_progressbar"
+            android:indeterminateDrawable="@drawable/progressbar_small"
+            android:layout_width="20dp"
+            android:layout_marginTop="0dp"
+            android:visibility="gone"
+            android:layout_height="20dp" />
 
-    <TextView
-        android:id="@+id/rowitem_subtext"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/rowitem_maintext"
+            android:layout_width="wrap_content"
+            android:layout_toRightOf="@id/rowitem_progressbar"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/black"
+            android:text=""
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/rowitem_maintext2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/rowitem_maintext"
+            android:layout_marginLeft="15dp"
+            android:text=""
+            android:textColor="@android:color/black" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/rowitem_sub_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginLeft="5dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/black"
-        android:layout_below="@id/rowitem_maintext" />
+        android:layout_marginTop="5dp">
 
-    <TextView
-        android:id="@+id/rowitem_subtext2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/rowitem_subtext"
-        android:layout_below="@id/rowitem_maintext2"
-        android:layout_marginLeft="10dp"
-        android:textColor="@android:color/black" />
+        <TextView
+            android:id="@+id/rowitem_subtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/black"
+            android:layout_below="@id/rowitem_maintext" />
+
+        <TextView
+            android:id="@+id/rowitem_subtext2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/rowitem_subtext"
+            android:layout_below="@id/rowitem_maintext2"
+            android:layout_marginLeft="15dp"
+            android:textColor="@android:color/black" />
+
+    </LinearLayout>
 
 
 
-</RelativeLayout>
+</LinearLayout>
