--- a/app/src/main/res/layout/dialog_homepass_so.xml
+++ b/app/src/main/res/layout/dialog_homepass_so.xml
@@ -69,13 +69,12 @@
                     android:orientation="vertical">
 
                     <id.co.myrepublic.salessupport.widget.CustomSpinner
-                        android:layout_marginTop="15dp"
                         android:id="@+id/dialogitem_spinner_customer_class"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:entries="@array/customer_class_arrays"
-                        app:validator="required"
-                        app:labelText="@string/dialog_homepass_customer" />
+                        android:layout_marginTop="15dp"
+                        app:labelText="@string/dialog_homepass_customer"
+                        app:validator="required" />
 
                 </LinearLayout>
 
